--- a/package.json
+++ b/package.json
@@ -1,7 +1,27 @@
 {
+  "name": "social-media-api",
+  "version": "1.0.0",
+  "description": "Backend app with express and mongoose ORM",
+  "main": "server.js",
   "dependencies": {
     "express": "^4.18.1",
     "moment": "^2.29.3",
-    "mongoose": "^6.3.2"
-  }
+    "mongoose": "^6.3.4",
+    "morgan": "^1.10.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "develop": "nodemon server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RaeSii/social-media-api.git"
+  },
+  "author": "Rachel",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/RaeSii/social-media-api/issues"
+  },
+  "homepage": "https://github.com/RaeSii/social-media-api#readme"
 }
